Get yogacore stuff to be re-exported in the shared library

--- a/src/yoga/CMakeLists.txt
+++ b/src/yoga/CMakeLists.txt
@@ -3,4 +3,11 @@ project(yoga-native)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(YOGA_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/yoga)
+include(${YOGA_ROOT}/cmake/project-defaults.cmake)
+
+add_subdirectory(${YOGA_ROOT})
+
 add_library(yoga-native SHARED library.cpp)
+
+target_link_libraries(yoga-native PRIVATE "$<LINK_LIBRARY:WHOLE_ARCHIVE,yogacore>")
