--- a/tests/Yoga.NET.Tests/Yoga.NET.Tests.csproj
+++ b/tests/Yoga.NET.Tests/Yoga.NET.Tests.csproj
@@ -25,4 +25,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Yoga.NET.Interop\Yoga.NET.Interop.csproj" />
   </ItemGroup>
+  <ItemGroup Condition="$([System.OperatingSystem]::IsMacOS()) And '$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture)' == 'arm64'">
+    <Content Include="..\..\cmake-build-debug\src\yoga\libyoga.dylib">
+      <Link>runtimes\osx-arm64\native\libyoga.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
